完成大三下四门课程整理

--- a/_minted-总结/test.tex
+++ b/_minted-总结/test.tex
@@ -74,34 +74,102 @@
     emph={TRUE,FALSE,NULL,NAN,NA,\$,<-,::},emphstyle=\color{CodeBlue2},
 }
 
+
+\newcounter{cnt}
+\setcounter{cnt}{0}
+
+\newcommand{\distpic}[3]{
+    % First draw the upper distribution.
+    % Shade the critical region:
+    \fill[red!30] (0.658,0)  -- plot[id=f3,domain=0.658:3,samples=50] function {exp(-x*x*0.5/0.16)} -- (3,0) -- cycle;
+
+    % Draw the normal distribution curve
+    \draw[blue!50!black,smooth,thick] plot[id=f1,domain=-2:3,samples=50] function {exp(-x*x*0.5/0.16)};
+    % Draw the x-axis
+    \draw[->,black] (-2.2,0) -- (3.2,0);
+    % Put some ticks and tick labels in:
+    \foreach \x in {-2,-1,0,1,2,3}
+    \draw (\x,0) -- (\x,-0.1) node[below] {$\x$};
+    % Put in a label for the critical region boundary:
+    \draw[red!50!black,thick] (0.658,0) node[below,yshift=-0.5cm] {0.658}
+    -- (0.658,0.85);
+
+    % Put in labels for accepting or rejecting the null hypothesis with
+    % the corresponding regions:
+    \draw[red!50!black,thick,->] (0.688,0.7) -- (1.3,0.7)
+        node[anchor=south] {Reject  $H_0$};
+    \draw[red!50!black,thick,->] (0.628,0.7) -- (-1,0.7)
+        node[anchor=south]{\parbox{1.5cm}{\raggedright Fail to reject $H_0$}};
+
+    % Add a label to the upper picture, when the null is true
+    \draw (-3,1) node[above,draw,fill=green!30] {$H_0$ is true:};
+
+    % Label the critical region with an alpha level:
+    \draw[<-,thick] (0.75,0.05) -- (1.6,0.2) node[right,yshift=0.3cm]
+    {\begin{tabular}{l} $\alpha=0.05$ \\ (Type I error rate) \end{tabular}};
+
+
+    % Add a label showing the effect size between the two plots:
+    \draw[very thin] (0,-1) -- (0,-0.5);
+    \draw[<->,thick] (0,-1) node[left] {Effect size:  #1} -- (#1,-1);
+    \draw[thick] (0,-.9) -- (0,-1.1);
+
+    \draw[very thin] (#1,-1) -- (#1,-1.7);
+    \draw[thick] (#1,-.9) -- (#1,-1.1);
+
+    % Now draw the lower distribution showing the effect size:
+    \begin{scope}[yshift=-3cm]
+    % Shade the "reject H0" region red
+    \fill[red!30] (0.658,0)  -- plot[id=f3\thecnt,domain=0.658:3,samples=50]
+        function {exp(-(x-#1)*(x-#1)*0.5/0.16)} --
+        (3,0) -- cycle;
+        % Shade the "accept H0" region blue
+    \fill[blue!30] (-2,0) -- plot[id=f4\thecnt,domain=-2:0.658,samples=50]
+        function {exp(-(x-#1)*(x-#1)*0.5/0.16)} --
+        (0.658,0) -- cycle;
+
+        % Draw the shifted normal distribution:
+    \draw[blue!50!black,smooth,thick] plot[id=f1\thecnt,domain=-2:3,samples=50]
+            function {exp(-(x-#1)*(x-#1)*0.5/0.16)};
+
+        % Draw the x-axis and put in some ticks and tick labels
+    \draw[->,black] (-2.2,0) -- (3.2,0);
+    \foreach \x in {-2,-1,0,1,2,3}
+            \draw (\x,0) -- (\x,-0.1) node[below] {$\x$};
+
+        % Draw and label the critical region boundary
+    \draw[red!50!black,very thick] (0.658,0) node[below,yshift=-0.5cm] {0.658}
+        -- (0.658,1.0);
+    \draw[red!50!black,very thick,->] (0.688,0.7) -- (2.7,0.7)
+        node[anchor=south west] {Reject  $H_0$};
+    \draw[red!50!black,very thick,->] (0.628,0.7) -- (-0.5,0.7)
+        node[anchor=south]{\parbox{1.5cm}{\raggedright Fail to reject $H_0$}};
+
+    % Add a label to the lower picture, when the alternative hypothesis is true:
+    \draw (-3,1) node[above,draw,fill=green!30] {$H_a$ is true:};
+
+        % Add labels showing the statistical power and the Type II error rate:
+    \draw[<-,thick] (1.5,0.1) -- (3,0.2) node[anchor=south west]
+        {Power = \large #2};
+    \draw[<-,thick] (0.4,0.1) -- (-1,0.2) node[left,yshift=0.3cm]
+        {\begin{tabular}{l}
+        $\beta$ = {\large #3} \\ (Type II error rate) \end{tabular}};
+    \end{scope}
+}
+
+
+
+
+
+
+
 \begin{document}
 
 
+\begin{tikzpicture}[scale=1.3]
+    \distpic{1.7}{.995}{.005}
+\end{tikzpicture}
 
-
-\begin{lstlisting}[language=R]
-    stringr::str_c()
-    library('plyr')
-    x <- factor(c('alpha','beta','gamma','alpha'))
-    levels(x)[levels(x)=='alpha'] <- 'two'
-    library('plyr')#aaaaabbbb
-    levels(x)
-    levels(x)[2] <- 'two'
-    levels(x)
-    library('stringr')
-    stringr::str_replace_all(levels(x),'^alpha$','one')
-    x
-    x <- factor(c('a','b','a','a'),levels = c('a','b','c'))
-    levels(x)
-    x <- factor(x)
-    droplevels()
-    df <- data.frame(x = factor(c("alpha", "beta", "alpha"), 
-      levels = c("alpha", "beta", "gamma")), y = c(5, 8, 2), 
-      z = factor(c("red", "green", "green"), levels = c("red", 
-        "green", "blue")))
-    df$x
-
-\end{lstlisting} 
 
 
 \end{document}
