--- a/sections/ReferenceBook.tex
+++ b/sections/ReferenceBook.tex
@@ -1,7 +1,15 @@
 \addcontentsline{toc}{section}{参考文献}
 \begin{thebibliography}{99}
+    \bibitem{讲义}
+    清华大学统计学研究中心 辅修课程课件与讲义. W. Deng, J. Wang, Z. Zhou, D. Li, T. Wang, S. Yu.
+    \bibitem{Springer参考书系列}
+    Springer Series in Statistics (SSS). \url{https://www.springer.com/series/692}
+    \bibitem{RStudioCheatSheets}
+    RStudio Cheatsheets \url{https://www.rstudio.com/resources/cheatsheets}
     \bibitem{概率论ref1}
     概率导论(第二版·修订版). Dimitri P. Bertsekas, John N. Tsitsiklis. 人民邮电出版社.
+    \bibitem{概率论ref2}
+    北京大学《概率统计A》课程讲义. 李东风. \url{https://www.math.pku.edu.cn/teachers/lidf/course/probstathsy/probstathsy.pdf}
     \bibitem{统计推断ref1}
     数理统计（第二版）. 韦来生. 科学出版社.
     \bibitem{统计推断ref2}
@@ -12,20 +20,38 @@
     线性模型引论. 王松桂 et. al. 科学出版社.
     \bibitem{线性回归分析ref3}
     Linear Models with R(2nd Edition). Julian J. Faraway. CRC Press.
+    \bibitem{线性回归分析ref4}
+    Generalized Linear Model Lecture Note. Germán Rodríguez. \url{https://data.princeton.edu/wws509/notes}
     \bibitem{多元统计分析ref1}
     实用多元统计分析（第六版）. Richard A. Johnson, Dean W. Wichern. 清华大学出版社.
     \bibitem{数据科学导论ref1}
     R In Action: Data Analysis and Graphics with R(2nd Edition). Robert I. Kabacoff. Manning Publications Co.
     \bibitem{数据科学导论ref2}
     R Programming For Data Science. Roger D. Peng. Lean Publishing.
-
-
-
-
-
-
-
-
+    \bibitem{统计计算与软件ref1}
+    Numerical Linear Algebra. I Lloyd N. Trefethen, David Bau Ill. Society for Industrial and Applied Mathematics
+    \bibitem{统计计算与软件ref2}
+    Numerical Optimization(2nd Edition). J. Nocedal, Stephen J. Wright. Springer Science+Business Media, LLC. 
+    \bibitem{统计计算与软件ref3}
+    北京大学《统计计算》课程讲义. 李东风. \url{https://www.math.pku.edu.cn/teachers/lidf/docs/statcomp/html/_statcompbook/statcomp2ndv.pdf}
+    \bibitem{生存分析ref1}
+    生存分析与可靠性. 陈家鼎. 北京大学出版社.
+    \bibitem{机器学习ref1}
+    机器学习. 周志华. 清华大学出版社.
+    \bibitem{机器学习ref2}
+    机器学习公式详解. 谢文睿, 秦州. 人民邮电出版社.
+    \bibitem{机器学习ref3}
+    神经网络与深度学习. 邱锡鹏. \url{https://nndl.github.io/}
+    \bibitem{时间序列ref1}
+    Time Series Analysis With Applications in R(2nd Edition). Jonathan D. Cryer, Kung-Sik Chan. Springer Science+Business Media, LLC.
+    \bibitem{时间序列ref2}
+    北京大学《应用时间序列分析》课程讲义. 李东风. \url{https://www.math.pku.edu.cn/teachers/lidf/course/atsa/atsanotes/html/_atsanotes/atsanotes.pdf}
+    \bibitem{时间序列ref3}
+    Forecasting: Principles and Practice (2nd Edition). Hyndman, R.J., Athanasopoulos, G. \url{https://otexts.com/fppcn}
+    \bibitem{因果推断ref1}
+    Causal Inference for Statistics, Social, and Biomedical Sciences: An Introduction. Guido W. Imbens \& Donald B. Rubin. Cambridge University Press.
+    \bibitem{因果推断ref2}
+    Causal Inference in Statistics - A Primer. Judea Pearl. Wiley.
 
 
 
