--- a/summary.tex
+++ b/summary.tex
@@ -1,7 +1,10 @@
 \documentclass[x11names,11pt,a4paper]{ctexart}
+
 %以下为所使用的宏包
 \usepackage{ulem}%下划线
 \usepackage{amsmath,amsfonts,amssymb,amsthm,amsbsy}%数学符号
+\usepackage{bm}%数学符号粗体
+\usepackage[dvipsnames]{xcolor}%颜色包
 \usepackage{graphicx}%插入图片
 \usepackage{booktabs}%三线表
 %\usepackage{indentfirst}%首行缩进
@@ -16,16 +19,19 @@
 \usepackage{enumitem}%列表间距
 \usepackage{multirow}%列表横向合并单元格
 \usepackage[colorlinks,linkcolor=red,anchorcolor=blue,citecolor=green]{hyperref}%超链接引用
+\usepackage{nameref}%交叉引用格式设置
 \usepackage{float}%图片、表格位置排版
 \usepackage{pict2e,keyval,fp,diagbox}%带有斜线的表格
 \usepackage{fancyvrb,listings}%设置代码插入环境
 \usepackage{minted}%代码环境设置
 \usepackage{fontspec}%字体设置
-\usepackage{color,xcolor}%颜色设置
+\usepackage{color}%颜色包
+\usepackage{extarrows}
 \usepackage{titlesec}%标题格式设置
-\usepackage{makeidx}\makeindex%索引 编译命令 makeindex summary.idx
+\usepackage{makeidx}\makeindex %索引 编译命令 makeindex summary.idx
 \usepackage{authblk}%titlepage作者信息
-
+\usepackage{nicematrix}%更好的矩阵标定
+\usepackage{fbox}%更多浮动体盒子
 
 
 %页边距设置
@@ -41,51 +47,65 @@
 \newfontfamily\consolas{Consolas}
 
 %其他设置
-\numberwithin{equation}{section}%公式按照章节编号
-\newenvironment{point}{\raggedright$\Box $ }{}%新环境，用于标示重点内容
+\newenvironment{point}{\raggedright$\Box $ \bfseries}{}%新环境，用于标示重点内容
 \newenvironment{rcode}{\raggedright$  \vartriangleright  $ \lstinline|R.| \textbf{Code}  \\}{}%新环境，用于建立R语言命令段落
+\renewenvironment{proof}{\textit{proof:} }{$ \square  $} % 证明环境回退到英文版 以proof开头
+\newenvironment{algorithm}[1]{\vspace{12pt} \hrule\hrule \vspace{3pt} \noindent\textbf{Algorithm } \,\textit{#1} \vspace{3pt} \hrule\vspace{6pt}
+}{\vspace{6pt}\hrule\hrule \vspace{12pt}} % 算法环境
+
 \newcolumntype{Y}{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}X}%tabularx中的居中表格格式
 \allowdisplaybreaks[2]%跨页公式
+\newcommand{\independent}{\bot\!\!\!\bot} % 简易的“独立于”符号
+
 
 %代码环境\lst设置
 \definecolor{CodeBlue}{HTML}{268BD2}
 \definecolor{CodeBlue2}{HTML}{0000CD}
-\definecolor{CodeGreen}{HTML}{2AA1A2}
+\definecolor{CodeGreen}{HTML}{60A0B0}
 \definecolor{CodeRed}{HTML}{CB4B16}
 \definecolor{CodeYellow}{HTML}{B58900}
 \definecolor{CodePurPle}{HTML}{D33682}
 \definecolor{CodeGreen2}{HTML}{859900}
 \lstset{
     language=R,
-    basicstyle=\fontspec{Consolas},
+    breaklines,
+    basicstyle=\tt,%\fontspec{Consolas},
     numbers=left, %设置行号位置
     numberstyle=\tiny\color{black}, %设置行号大小
     keywordstyle=\color{black}, %设置关键字颜色
     stringstyle=\color{gray}, %设置字符串颜色
     commentstyle=\color{CodeGreen}, %设置注释颜色
     frame=single, %设置边框格式
+    columns=fixed,
     escapeinside=``, %逃逸字符(1左面的键)，用于显示中文
     %breaklines, %自动折行
     extendedchars=false, %解决代码跨页时，章节标题，页眉等汉字不显示的问题
     xleftmargin=2em,xrightmargin=2em, aboveskip=1em, %设置边距
     tabsize=4, %设置tab空格数
     showspaces=false, %不显示空格
-    emph={TRUE,FALSE,NULL,NAN,NA,\$,<-,T,F,:},emphstyle=\color{CodeBlue2}, %其他高亮
+    emph={TRUE,FALSE,NULL,NAN,NaN,Inf,NA,\$,<-,T,F,:},emphstyle=\color{CodeBlue2} ,%逻辑符
+    emph={[2]in,for,if,else,ifelse,function,return,stopifnot,switch,stop},emphstyle=[2]\color{purple} ,%流程控制
 }
 
-%节标题格式设置
+% 节标题格式设置
 \titleformat{\section}[block]{\centering\Large\bfseries}{Chapter. \Roman{section} }{1em}{}[]
 \titleformat{\subsection}[block]{\Large\bfseries}{Section \arabic{section}.\arabic{subsection}}{1em}{}[]
-% \titleformat{\subsubsection}[block]{\normalsize\bfseries}{    \arabic{subsection}-\alph{subsubsection}}{1em}{}[]
+\titleformat{\subsubsection}[block]{\large\bfseries}{\arabic{section}.\arabic{subsection}.\arabic{subsubsection}}{1em}{}[]
+% 节标题、公式交叉引用格式设置
+\numberwithin{equation}{section}%公式按照章节编号
+\renewcommand{\equationautorefname}{equation.}%公式引用格式
+\renewcommand{\figureautorefname}{figure.}%图片引用格式
+\renewcommand{\sectionautorefname}{Chapter.}%章节引用格式
+\renewcommand{\subsectionautorefname}{section.}%章节引用格式
+\renewcommand{\subsubsectionautorefname}{section.}%章节引用格式
+
 % \titleformat{\paragraph}[block]{\small\bfseries}{[\arabic{paragraph}]}{1em}{}[]
 
 % \\titleformat{\\sectioncommand}[shape]{format}{title-label}{sep}{before-title}[after-title]
 
 
 %SumatraPDF反向搜索命令行
-%"C:\Users\彭拓锐Vincent\AppData\Local\Programs\Microsoft VS Code\Code.exe" "C:/Users/彭拓锐Vincent/AppData/Local/Programs/Microsoft VS Code\resources\app\out\cli.js" -r -g "%f:%l"
-
-
+% "C:\Users\彭拓锐Vincent\AppData\Local\Programs\Microsoft VS Code\Code.exe" "C:/Users/彭拓锐Vincent/AppData/Local/Programs/Microsoft VS Code\resources\app\out\cli.js" -r -g "%f:%l"
 
 
 \begin{titlepage}
@@ -134,8 +154,8 @@
 \include{sections/统计推断}
 \newpage
 
- \include{sections/R}
- \newpage
+%  \include{sections/R}
+%  \newpage
 
 \include{sections/线性回归分析}
 \newpage
@@ -146,14 +166,43 @@
 \include{sections/数据科学导论}
 \newpage
 
+\include{sections/统计计算与软件}
+\newpage
+
+\include{sections/可靠性数据与生存分析}
+\newpage
+
+\include{sections/生物统计学概论}
+\newpage
+
+\include{sections/统计学习导论}
+\newpage
+
+\include{sections/应用时间序列分析}
+\newpage
+
+\include{sections/因果推断导论}
+\newpage
+
+\include{sections/应用随机过程}
+\newpage
+
+
+
 \include{sections/ReferenceBook}
 \newpage
 
-\newpage
+
 \addcontentsline{toc}{section}{索引}
 \printindex
 
 
 \end{document}
+
+
+
+
+
+
 
 
