完成截至大三的课程；完善了引用，参考文献和索引；完善了伪代码格式；

--- a/sections/多元统计分析.tex
+++ b/sections/多元统计分析.tex
@@ -1720,7 +1720,13 @@ Determination Criterion:
     \end{itemize}
 \end{itemize}
 
-    
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.7\linewidth]{sections/images/Hierarchical Clustering.png}
+    \caption{Illustration of Hierarchical Clustering}
+    \label{}
+\end{figure}
+
 
 \subsubsection{$ K $-Means Clustering Algorithm}
     \index{Clustering Analysis!$ K $-Means Clustering Algorithm}\index{k-Means Clustering Algorithm@$ k $-Means Clustering Algorithm}
