--- a/sections/统计学习导论.tex
+++ b/sections/统计学习导论.tex
@@ -494,7 +494,7 @@ glmnet(x, y, family="binomial", alpha, lambda) # with penalty
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.4\linewidth]{pic/SVM.png}
+    \includegraphics[width=0.4\linewidth]{sections/images/SVM.png}
     \caption{Support Vector Machine Illustration}
     \label{FigSVMIllustration}
 \end{figure}
@@ -1016,7 +1016,13 @@ Some definition:
 
     Performance of tree classification could be largely improved with bagging method and boosting method.
 
-    
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\linewidth]{sections/images/tree.png}
+    \caption{}
+    \label{}
+\end{figure}
+
 
 \subsubsection{Bagging and Boosting}
     
